# safe-brute-force

./: .envrc  .gitignore  .gitlab-ci.yml  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSION_NEEDED.md  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.md  META.scm  PROJECT_SUMMARY.md  README.adoc  RSR_COMPLIANCE.md  STATE.scm  TEST-NEEDS.md  deno.json  guix.scm  justfile  rebar.config  sbf_cli
.claude/: CLAUDE.md
.github/: TEST_CI_SHA.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  guix-nix-policy.yml  hypatia-scan.yml  instant-sync.yml  jekyll-gh-pages.yml  mirror.yml  pages.yml  quality.yml  rsr-antipattern.yml  (+7 more)
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt
config/: sys.config  vm.args
docs/: API_REFERENCE.md  CITATIONS.adoc  CONTRIBUTING.md  MULTI_LANGUAGE_ARCHITECTURE.md  QUICKSTART.md  REPRODUCIBLE_BUILDS.md  SECURITY.md  TYPE_SAFETY_ROADMAP.md  USAGE.md  tech-debt-2026-05-26.md
examples/: custom_pattern_test.lfe  http_login_test.lfe  pin_code_test.lfe
include/: types.hrl
rescript_modules/: README.md  deno.json  package.json  rescript.json
rust_nif/: Cargo.toml  README.md
rust_nif/src/: lib.rs
src/: safe_brute_force.app.src  sbf.lfe  sbf_app.lfe  sbf_checkpoint.lfe  sbf_executor.lfe  sbf_logger.lfe  sbf_output.lfe  sbf_patterns.lfe  sbf_progress.lfe  sbf_rate_limiter.lfe  sbf_state.lfe  sbf_sup.lfe
test/: sbf_tests.lfe
tests/: validate_examples.sh  validate_structure.sh
(+15 files in other folders)
